--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "axios": "^0.19.0",
+    "clsx": "^1.0.4",
     "minireset.css": "^0.0.5",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
