--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
     "recharts": "^1.7.1",
