--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-router": "^5.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
+    "react-select": "^3.0.8",
     "recharts": "^1.7.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
